fix: controller path + missing swagger updates
